--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+<div class="container">
+    <form class="form mat-elevation-z8">
+        <h1>Help Desk</h1>
+        <mat-form-field class="full-width" appearance="fill">
+            <mat-label>E-mail</mat-label>
+            <input matInput placeholder="peaple@mail.com">
+        </mat-form-field>
+
+        <mat-form-field class="full-width" appearance="fill">
+            <mat-label>Senha</mat-label>
+            <input type="password" matInput placeholder="Exemple 123">
+        </mat-form-field>
+
+        <button class="full-width mat-elevation-z4" mat-stroked-button color="primary">Primary</button>
+    </form>
+</div>
