--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -3,14 +3,22 @@
         <h1>Help Desk</h1>
         <mat-form-field class="full-width" appearance="fill">
             <mat-label>E-mail</mat-label>
-            <input matInput placeholder="peaple@mail.com">
+            <input [formControl]="email"
+                   required
+                   [(ngModel)]="cred.email"
+                   name="email"
+                   matInput placeholder="peaple@mail.com">
         </mat-form-field>
 
         <mat-form-field class="full-width" appearance="fill">
             <mat-label>Senha</mat-label>
-            <input type="password" matInput placeholder="Exemple 123">
+            <input [formControl]="senha"
+                   required
+                   [(ngModel)]="cred.senha"
+                   name="senha" type="password"
+                   matInput placeholder="Exemple 123">
         </mat-form-field>
 
-        <button class="full-width mat-elevation-z4" mat-stroked-button color="primary">Primary</button>
+        <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-stroked-button color="primary">Login</button>
     </form>
 </div>
