--- a/frontend/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/frontend/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Lista de Técnicos</h1>
-    <button mat-raised-button class="btnAlign" color="primary">Novo técnico</button>
+    <button routerLink="create" mat-raised-button class="btnAlign" color="primary">Novo técnico</button>
 
     <mat-form-field appearance="standard">
         <mat-label>Filter</mat-label>
