--- a/frontend/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
+++ b/frontend/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
@@ -4,37 +4,60 @@
         <img class="fullwidth" src="#" alt="cadastrar tecnico">
 
         <section class="section">
-            <mat-checkbox class="margin" >Administrador</mat-checkbox>
-            <mat-checkbox class="margin" >Técnico</mat-checkbox>
-            <mat-checkbox class="margin" >Cliente</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(0)" class="margin"  color="primary">Administrador</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(1)"class="margin" color="primary">Técnico</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(2)" class="margin" color="primary">Cliente</mat-checkbox>
         </section>
 
         <mat-form-field class="fullwidth" appearance="legacy">
             <mat-label>Nome</mat-label>
-            <input matInput placeholder="Placeholder">
+            <input  [(ngModel)]="tecnico.nome"
+                    name="nome"
+                    [formControl]="nome"
+                    required
+                    matInput
+                    placeholder="John Silva"
+                    maxlength="50">
             <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullwidth" appearance="legacy">
             <mat-label>CPF</mat-label>
-            <input matInput placeholder="Placeholder">
+            <input  [(ngModel)]="tecnico.cpf"
+                    name="cpf"
+                    [formControl]="cpf"
+                    required
+                    matInput
+                    placeholder="000.000.000-00"
+                    mask="000.000.000-00">
             <mat-icon matSuffix>pin</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullwidth" appearance="legacy">
             <mat-label>E-mail</mat-label>
-            <input matInput placeholder="Placeholder">
+            <input  [(ngModel)]="tecnico.email"
+                    name="email"
+                    [formControl]="email"
+                    required
+                    matInput
+                    placeholder="pessoa@mail.com">
             <mat-icon matSuffix>email</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullwidth" appearance="legacy">
             <mat-label>Senha</mat-label>
-            <input type="password" matInput placeholder="Placeholder">
+            <input  [(ngModel)]="tecnico.senha"
+                    name="senha"
+                    [formControl]="senha"
+                    required
+                    type="password"
+                    matInput
+                    placeholder="***">
             <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
 
-        <button  mat-raised-button class="btnAlign" color="primary">Cadastrar</button>
-        <button  mat-raised-button>Cancelar</button>
+        <button (click)="create()" [disabled]="!validaCampos()" mat-raised-button class="btnAlign" color="primary">Cadastrar</button>
+        <button routerLink="../"  mat-raised-button>Cancelar</button>
 
     </form>
 
